# sudoku-solver

./: .gitignore  AGENTS.md  Makefile  README.md  codemap.md  pyproject.toml  trace.json
.github/workflows/: ci.yml
data/: 001.json  001.trace.json  002.json  template.json
docs/: ROADMAP.md  metric.md
docs/design/: db-design.md  io.md  metrics-collector-design.md  overview.md  solver_backtracking.md  trace.md
examples/: puzzle_easy.json  solution_easy.json
src/sudoku_solver/: __init__.py  cli.py  types.py
src/sudoku_solver/board/: __init__.py  grid.py
src/sudoku_solver/db/: sqlite_writer.py  writer.py
src/sudoku_solver/instrumentation/: recorder.py
src/sudoku_solver/io/: __init__.py  json_io.py
src/sudoku_solver/metrics/: collector.py
src/sudoku_solver/solver/: __init__.py  backtracking.py
src/sudoku_solver/trace/: __init__.py  tracer.py
src/sudoku_solver/verify/: __init__.py  verify.py
tests/: test_smoke.py
